# open-bath-map

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: lighthouse.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_sqlmodel_init.py  0002_add_postgis_geom.py  0003_add_wiki_fields_to_map_items.py  0004_add_bathing_profile_url_to_map_items.py  0005_add_measurements_to_bathing_sites_and_map_items.py
backend/app/: config.py  main.py
backend/app/api/routes/: bathing_sites.py  health.py  map.py
backend/app/data/: pois.json
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: bathing_site.py  map_item.py
backend/app/services/: opendata.py  postgres_store.py
backend/app/services/opendata/: __init__.py  constants.py  dataset.py  service.py  source_queries.toml  utils.py  wiki.py
frontend/: app.vue  nuxt.config.ts  package.json
frontend/assets/css/: main.css
frontend/components/map/: MapBottomSheet.vue  MapExperience.vue  MapFilters.vue  MapIntro.vue  (+3 more)
frontend/composables/: useBathingApi.ts  useGeolocation.ts  useImageFallback.ts  useJsonLd.ts  useMapData.ts  useMapSelection.ts  useMapState.ts
frontend/content/: landingPages.ts
frontend/pages/: [[slug]].vue  datenschutz.vue  impressum.vue
frontend/public/: site.webmanifest  sw.js
frontend/types/: bathing-site.ts  map.ts
frontend/utils/: formatters.ts  landingSelectors.ts  landingSeo.ts  landingValidation.ts
scripts/: generate_sitemap.py  sync_postgres.py
(+16 files in other folders)
