[project]
name = "open-bath-map-backend"
version = "0.1.0"
description = "FastAPI backend for bathing sites in Schleswig-Holstein"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
