[project]
name = "open-bath-map-backend"
version = "0.1.0"
description = "FastAPI backend for bathing sites in Schleswig-Holstein"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "geoalchemy2>=0.15.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.services.opendata" = ["*.toml"]
